# scopehal-plugins-gpl

./: CMakeLists.txt  LICENSE  README.md  SCPILinuxGPIBTransport.cpp  SCPILinuxGPIBTransport.h  plugin-main.cpp
